# auto-drone

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  build.sh  headless-demo.md  how-to-run-demo.md  status.md  viewer-demo.md
.github/workflows/: ci.yml
autonomy_stack/object_tracking/: CMakeLists.txt  PerceptionEngine.cpp  PerceptionEngine.hpp  PerceptionNode.cpp
autonomy_stack/obstacle_avoidance/: CMakeLists.txt  CommandArbiter.cpp  CommandArbiter.hpp
cmake/: helpers.cmake
demos/01_sensor_streaming/: CMakeLists.txt  MockPublisher.cpp  ViewerNode.cpp  ViewerNodeHeadless.cpp  WebcamPublisher.cpp
demos/02_waypoint_following/: CMakeLists.txt  README.md  SimulatedDrone.cpp  WaypointManager.cpp  WaypointPublisher.cpp  run_waypoint_demo.sh
demos/03_object_tracking/: CMakeLists.txt  MockTargetPublisher.cpp  TargetTrackerNode.cpp
demos/04_obstacle_avoidance/: CMakeLists.txt  CommandArbiterNode.cpp  MockProximityPublisher.cpp  ObstacleAvoidanceNode.cpp
demos/05_behavior_tree/: CMakeLists.txt  bt_mission_runner.cpp
docs/: INSTALL.md  airsim-integration.md  airsim-setup.md  architectural-design.md  architecture-mission-orchestrator.md  architecture-multi-camera-detection.md  architecture-yolo-world-detection.md  bt-status.md  coordinate-systems.md  dev-plan-summary.md  how-to-setup-pywin.md  object-tracking.md  obstacle-avoidance.md  phase-library.md  sensor-streaming.md  swarm-coordination.md  visual-slam.md  visual-waypoint-navigation.md  way-point-following.md  waypoint-following.md
docs/quick-starts/: airsim-dev-test.md  object-tracking-demo.md  obstacle-avoidance-demo.md  python-bridge.md  sensor-streaming-demo.md
docs/quickstarts/: airsim-dev-test.md
docs/sessions/: 2024-12-08-phase1-ci-multicamera.md  2024-12-08-phase2-waypoint-following.md  2025-12-08-airsim-integration.md  2025-12-08-phase1-ci-multicamera.md  2025-12-08-phase2-waypoint-following.md  2025-12-08-phase3-object-tracking.md  2025-12-09-airsim-zenoh-bridge.md  2025-12-10-waypoint-demo-integration.md  2025-12-16-phase4-obstacle-avoidance.md  2025-12-18-yolo-multicam-recording.md  2025-12-19-mission-framework.md  2025-12-21-behavior-tree-integration.md  README.md
docs/tradeoffs/: gtest-vs-catch2.md
libs/behavior_tree/: CMakeLists.txt
libs/behavior_tree/include/behavior_tree/: bt_blackboard_sync.hpp  bt_conditions.hpp  bt_factory.hpp  bt_phase_action.hpp
libs/behavior_tree/src/: bt_blackboard_sync.cpp  bt_conditions.cpp  bt_factory.cpp  bt_phase_action.cpp
libs/behavior_tree/tests/: CMakeLists.txt  test_conditions.cpp
libs/behavior_tree/trees/: orange_ball_mission.xml  robust_mission.xml
libs/control_algorithms/: CMakeLists.txt  PIDController.cpp  PIDController.hpp  ReactiveAvoidance.cpp  ReactiveAvoidance.hpp  TargetTracker.cpp  TargetTracker.hpp
libs/control_algorithms/tests/: CMakeLists.txt  PIDControllerTest.cpp  ReactiveAvoidanceTest.cpp
libs/data_types/: CMakeLists.txt  ImageData.cpp  ImageData.hpp  ObjectDetection.cpp  ObjectDetection.hpp  Odometry.cpp  Odometry.hpp  ProximityData.cpp  ProximityData.hpp  VelocityCommand.cpp  VelocityCommand.hpp  Waypoint.cpp  Waypoint.hpp
libs/data_types/tests/: CMakeLists.txt  DataTypesTest.cpp
libs/zenoh_interface/: CMakeLists.txt  ZenohInterface.cpp  ZenohInterface.hpp
libs/zenoh_interface/tests/: CMakeLists.txt  ZenohInterfaceTest.cpp
scripts/: install-airsim-linux.sh  install-deps-linux.sh  install-deps-macos.sh  install-deps-windows.ps1
sim_interfaces/airsim_client/: AirSimBridge.cpp  AirSimClient.cpp  AirSimClient.hpp  CMakeLists.txt
sim_interfaces/airsim_zenoh_bridge/: CMakeLists.txt  README.md  __init__.py  airsim_zenoh_bridge.py  data_types.py  drone_commander.py  examples.txt  fly_to_orange_ball.py  fly_to_orange_ball_multicam.py  fly_to_orange_ball_phased.py  fly_to_orange_ball_yolo.py  how-to-run-bridge.md  how-to-run-drone-commander.md  mock_bridge.py  pillar_corridor_mission.py  pose_data_type.py  record_mission.py  requirements.txt  rgb_camera_topic.py  run_branes_visnav_drone.sh  run_mission.py  test_bridge.py  test_bridge_cpp.cpp  yolo_multi_camera_detector.py  yolo_world_detector.py
sim_interfaces/airsim_zenoh_bridge/missions/: config.py  runner.py  state.py
sim_interfaces/airsim_zenoh_bridge/missions/phases/: __init__.py  approach.py  base.py  land.py  select.py
sim_interfaces/airsim_zenoh_bridge/missions/services/: __init__.py  detection.py  drone.py
sim_interfaces/airsim_zenoh_bridge/sim_config/: branes_visnav_drone.jsonc  robot_quadrotor_highspeed_10ms.jsonc  robot_quadrotor_highspeed_20ms.jsonc  robot_quadrotor_highspeed_30ms.jsonc  robot_quadrotor_vision.jsonc  scene_highspeed_10ms.jsonc  scene_highspeed_20ms.jsonc  scene_highspeed_30ms.jsonc  scene_pillar_corridor.jsonc  scene_vision_drone.jsonc
